crates/mun_codegen/src/snapshots/mun_codegen__test__bit_op_i16.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn not(a: i16) -> i16 { !a }\n    pub fn bitand(a: i16, b: i16) -> i16 { a & b }\n    pub fn bitor(a: i16, b: i16) -> i16 { a | b }\n    pub fn bitxor(a: i16, b: i16) -> i16 { a ^ b }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x ptr]

define i16 @not(i16 %0) {
body:
  %a = alloca i16, align 2
  store i16 %0, ptr %a, align 2
  %a1 = load i16, ptr %a, align 2
  %not = xor i16 %a1, -1
  ret i16 %not
}

define i16 @bitand(i16 %0, i16 %1) {
body:
  %b = alloca i16, align 2
  store i16 %1, ptr %b, align 2
  %a = alloca i16, align 2
  store i16 %0, ptr %a, align 2
  %a1 = load i16, ptr %a, align 2
  %b2 = load i16, ptr %b, align 2
  %bit_and = and i16 %a1, %b2
  ret i16 %bit_and
}

define i16 @bitor(i16 %0, i16 %1) {
body:
  %b = alloca i16, align 2
  store i16 %1, ptr %b, align 2
  %a = alloca i16, align 2
  store i16 %0, ptr %a, align 2
  %a1 = load i16, ptr %a, align 2
  %b2 = load i16, ptr %b, align 2
  %bit_or = or i16 %a1, %b2
  ret i16 %bit_or
}

define i16 @bitxor(i16 %0, i16 %1) {
body:
  %b = alloca i16, align 2
  store i16 %1, ptr %b, align 2
  %a = alloca i16, align 2
  store i16 %0, ptr %a, align 2
  %a1 = load i16, ptr %a, align 2
  %b2 = load i16, ptr %b, align 2
  %bit_xor = xor i16 %a1, %b2
  ret i16 %bit_xor
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
