crates/mun_codegen/src/snapshots/mun_codegen__test__compare_op_i128.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn equals(a: i128, b: i128) -> bool { a == b }\n    pub fn not_equal(a: i128, b: i128) -> bool { a != b}\n    pub fn less(a: i128, b: i128) -> bool { a < b }\n    pub fn less_equal(a: i128, b: i128) -> bool { a <= b }\n    pub fn greater(a: i128, b: i128) -> bool { a > b }\n    pub fn greater_equal(a: i128, b: i128) -> bool { a >= b }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [2 x ptr]

define i1 @equals(i128 %0, i128 %1) {
body:
  %b = alloca i128, align 8
  store i128 %1, ptr %b, align 4
  %a = alloca i128, align 8
  store i128 %0, ptr %a, align 4
  %a1 = load i128, ptr %a, align 4
  %b2 = load i128, ptr %b, align 4
  %eq = icmp eq i128 %a1, %b2
  ret i1 %eq
}

define i1 @not_equal(i128 %0, i128 %1) {
body:
  %b = alloca i128, align 8
  store i128 %1, ptr %b, align 4
  %a = alloca i128, align 8
  store i128 %0, ptr %a, align 4
  %a1 = load i128, ptr %a, align 4
  %b2 = load i128, ptr %b, align 4
  %neq = icmp ne i128 %a1, %b2
  ret i1 %neq
}

define i1 @less(i128 %0, i128 %1) {
body:
  %b = alloca i128, align 8
  store i128 %1, ptr %b, align 4
  %a = alloca i128, align 8
  store i128 %0, ptr %a, align 4
  %a1 = load i128, ptr %a, align 4
  %b2 = load i128, ptr %b, align 4
  %less = icmp slt i128 %a1, %b2
  ret i1 %less
}

define i1 @less_equal(i128 %0, i128 %1) {
body:
  %b = alloca i128, align 8
  store i128 %1, ptr %b, align 4
  %a = alloca i128, align 8
  store i128 %0, ptr %a, align 4
  %a1 = load i128, ptr %a, align 4
  %b2 = load i128, ptr %b, align 4
  %lesseq = icmp sle i128 %a1, %b2
  ret i1 %lesseq
}

define i1 @greater(i128 %0, i128 %1) {
body:
  %b = alloca i128, align 8
  store i128 %1, ptr %b, align 4
  %a = alloca i128, align 8
  store i128 %0, ptr %a, align 4
  %a1 = load i128, ptr %a, align 4
  %b2 = load i128, ptr %b, align 4
  %greater = icmp sgt i128 %a1, %b2
  ret i1 %greater
}

define i1 @greater_equal(i128 %0, i128 %1) {
body:
  %b = alloca i128, align 8
  store i128 %1, ptr %b, align 4
  %a = alloca i128, align 8
  store i128 %0, ptr %a, align 4
  %a1 = load i128, ptr %a, align 4
  %b2 = load i128, ptr %b, align 4
  %greatereq = icmp sge i128 %a1, %b2
  ret i1 %greatereq
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [2 x ptr] zeroinitializer
