crates/mun_codegen/src/snapshots/mun_codegen__test__compare_op_i16.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn equals(a: i16, b: i16) -> bool { a == b }\n    pub fn not_equal(a: i16, b: i16) -> bool { a != b}\n    pub fn less(a: i16, b: i16) -> bool { a < b }\n    pub fn less_equal(a: i16, b: i16) -> bool { a <= b }\n    pub fn greater(a: i16, b: i16) -> bool { a > b }\n    pub fn greater_equal(a: i16, b: i16) -> bool { a >= b }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [2 x ptr]

define i1 @equals(i16 %0, i16 %1) {
body:
  %b = alloca i16, align 2
  store i16 %1, ptr %b, align 2
  %a = alloca i16, align 2
  store i16 %0, ptr %a, align 2
  %a1 = load i16, ptr %a, align 2
  %b2 = load i16, ptr %b, align 2
  %eq = icmp eq i16 %a1, %b2
  ret i1 %eq
}

define i1 @not_equal(i16 %0, i16 %1) {
body:
  %b = alloca i16, align 2
  store i16 %1, ptr %b, align 2
  %a = alloca i16, align 2
  store i16 %0, ptr %a, align 2
  %a1 = load i16, ptr %a, align 2
  %b2 = load i16, ptr %b, align 2
  %neq = icmp ne i16 %a1, %b2
  ret i1 %neq
}

define i1 @less(i16 %0, i16 %1) {
body:
  %b = alloca i16, align 2
  store i16 %1, ptr %b, align 2
  %a = alloca i16, align 2
  store i16 %0, ptr %a, align 2
  %a1 = load i16, ptr %a, align 2
  %b2 = load i16, ptr %b, align 2
  %less = icmp slt i16 %a1, %b2
  ret i1 %less
}

define i1 @less_equal(i16 %0, i16 %1) {
body:
  %b = alloca i16, align 2
  store i16 %1, ptr %b, align 2
  %a = alloca i16, align 2
  store i16 %0, ptr %a, align 2
  %a1 = load i16, ptr %a, align 2
  %b2 = load i16, ptr %b, align 2
  %lesseq = icmp sle i16 %a1, %b2
  ret i1 %lesseq
}

define i1 @greater(i16 %0, i16 %1) {
body:
  %b = alloca i16, align 2
  store i16 %1, ptr %b, align 2
  %a = alloca i16, align 2
  store i16 %0, ptr %a, align 2
  %a1 = load i16, ptr %a, align 2
  %b2 = load i16, ptr %b, align 2
  %greater = icmp sgt i16 %a1, %b2
  ret i1 %greater
}

define i1 @greater_equal(i16 %0, i16 %1) {
body:
  %b = alloca i16, align 2
  store i16 %1, ptr %b, align 2
  %a = alloca i16, align 2
  store i16 %0, ptr %a, align 2
  %a1 = load i16, ptr %a, align 2
  %b2 = load i16, ptr %b, align 2
  %greatereq = icmp sge i16 %a1, %b2
  ret i1 %greatereq
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [2 x ptr] zeroinitializer
