crates/mun_codegen/src/snapshots/mun_codegen__test__compare_op_u8.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn equals(a: u8, b: u8) -> bool { a == b }\n    pub fn not_equal(a: u8, b: u8) -> bool { a != b}\n    pub fn less(a: u8, b: u8) -> bool { a < b }\n    pub fn less_equal(a: u8, b: u8) -> bool { a <= b }\n    pub fn greater(a: u8, b: u8) -> bool { a > b }\n    pub fn greater_equal(a: u8, b: u8) -> bool { a >= b }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [2 x ptr]

define i1 @equals(i8 %0, i8 %1) {
body:
  %b = alloca i8, align 1
  store i8 %1, ptr %b, align 1
  %a = alloca i8, align 1
  store i8 %0, ptr %a, align 1
  %a1 = load i8, ptr %a, align 1
  %b2 = load i8, ptr %b, align 1
  %eq = icmp eq i8 %a1, %b2
  ret i1 %eq
}

define i1 @not_equal(i8 %0, i8 %1) {
body:
  %b = alloca i8, align 1
  store i8 %1, ptr %b, align 1
  %a = alloca i8, align 1
  store i8 %0, ptr %a, align 1
  %a1 = load i8, ptr %a, align 1
  %b2 = load i8, ptr %b, align 1
  %neq = icmp ne i8 %a1, %b2
  ret i1 %neq
}

define i1 @less(i8 %0, i8 %1) {
body:
  %b = alloca i8, align 1
  store i8 %1, ptr %b, align 1
  %a = alloca i8, align 1
  store i8 %0, ptr %a, align 1
  %a1 = load i8, ptr %a, align 1
  %b2 = load i8, ptr %b, align 1
  %less = icmp ult i8 %a1, %b2
  ret i1 %less
}

define i1 @less_equal(i8 %0, i8 %1) {
body:
  %b = alloca i8, align 1
  store i8 %1, ptr %b, align 1
  %a = alloca i8, align 1
  store i8 %0, ptr %a, align 1
  %a1 = load i8, ptr %a, align 1
  %b2 = load i8, ptr %b, align 1
  %lesseq = icmp ule i8 %a1, %b2
  ret i1 %lesseq
}

define i1 @greater(i8 %0, i8 %1) {
body:
  %b = alloca i8, align 1
  store i8 %1, ptr %b, align 1
  %a = alloca i8, align 1
  store i8 %0, ptr %a, align 1
  %a1 = load i8, ptr %a, align 1
  %b2 = load i8, ptr %b, align 1
  %greater = icmp ugt i8 %a1, %b2
  ret i1 %greater
}

define i1 @greater_equal(i8 %0, i8 %1) {
body:
  %b = alloca i8, align 1
  store i8 %1, ptr %b, align 1
  %a = alloca i8, align 1
  store i8 %0, ptr %a, align 1
  %a1 = load i8, ptr %a, align 1
  %b2 = load i8, ptr %b, align 1
  %greatereq = icmp uge i8 %a1, %b2
  ret i1 %greatereq
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [2 x ptr] zeroinitializer
