crates/mun_codegen/src/snapshots/mun_codegen__test__function.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn main() {\n    }\n    "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

define void @main() {
body:
  ret void
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

