crates/mun_codegen/src/snapshots/mun_codegen__test__invalid_binary_ops.snap
---
source: crates/mun_codegen/src/test.rs
expression: "pub fn main() {\n  let a = 3+3.0;\n  let b = 3.0+3;\n}"
---
; == FILE IR =====================================
error 2:13: mismatched type
error 3:15: mismatched type

; == GROUP IR ====================================

